Fix partners bar alignment

--- a/src/_includes/less/objects/_gallery.less
+++ b/src/_includes/less/objects/_gallery.less
@@ -87,7 +87,7 @@
 
   .gallery__item {
     width: 26.07033%;
-    min-height: 55px;
+    min-height: 107px;
   }
 
   //  Reset left padding for right items
